--- a/paf/src/main/resources/application.properties
+++ b/paf/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
 # Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/paf?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/shopping?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = root
 
